--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ramda": "^0.27.1"
   }
 }
