--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
-    "ramda": "^0.27.1"
+    "yup": "^0.32.8"
   }
 }
