--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "lodash": "^4.17.20",
