--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.8"
   },
   "devDependencies": {}
